<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shopee"
    tools:context=".fragment.InfoFragment2">

    <TextView
        android:id="@+id/navigation_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/page2"/>

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/navigation_info2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/title_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:textColor="@color/white"
            android:text="@string/memo"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@id/layout_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/penjelasan"/>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:text="@string/txt_add"/>
    </LinearLayout>
</RelativeLayout>