<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="393dp"
        android:layout_height="49dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="Profile"
        android:textColor="@color/black"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="20dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="657dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="588dp"
            android:layout_margin="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="365dp"
                android:layout_height="274dp"
                android:src="@drawable/ridho" />

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="334dp"
                android:layout_height="246dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="50dp"
                android:text="@string/nim"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="334dp"
                android:layout_height="197dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="50dp"
                android:text="@string/nama"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="334dp"
                android:layout_height="147dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="50dp"
                android:text="@string/kelas"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="334dp"
                android:layout_height="101dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="50dp"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>